--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "react-dom": "^19.0.0",
     "react-icons": "^5.5.0",
     "react-lottie": "^1.2.10",
+    "react-markdown": "^10.1.0",
     "react-spinners": "^0.15.0"
   },
   "devDependencies": {
