--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "concurrently": "^9.1.2",
     "cookie": "^1.0.2",
     "crypto": "^1.0.1",
+    "date-fns": "^4.1.0",
     "dotenv": "^16.5.0",
     "express": "^5.1.0",
     "google-auth-library": "^9.15.1",
@@ -30,6 +31,7 @@
     "next-pwa": "^5.6.0",
     "nodemailer": "^6.10.1",
     "react": "^19.0.0",
+    "react-date-range": "^2.0.1",
     "react-dom": "^19.0.0",
     "react-icons": "^5.5.0",
     "react-lottie": "^1.2.10",
@@ -43,6 +45,7 @@
     "@types/next-pwa": "^5.6.9",
     "@types/node": "^20",
     "@types/react": "^19",
+    "@types/react-date-range": "^1.4.10",
     "@types/react-dom": "^19",
     "@types/react-lottie": "^1.2.10",
     "eslint": "^9",
